# AMMOcoin

./: .gitattributes  .gitignore  AUDIT_AND_UPDATE_PLAN.md  AUDIT_COMPLETE_READY_FOR_OPTION_2.5.md  AUDIT_COMPLETION_SUMMARY.md  AUDIT_FINDINGS_2025-12-30.md  AUDIT_RESULTS_AND_NEXT_STEPS.md  BINARY_BUILD_SOLUTION.md  BINARY_DISTRIBUTION_GUIDE.md  BUILD_FROM_SOURCE_LINUX.md  BUILD_FROM_SOURCE_RASPBERRY_PI.md  BUILD_FROM_SOURCE_WINDOWS.md  BUILD_SYSTEM_READY.md  CRITICAL_GENESIS_BLOCK_ISSUE.md  CURRENT_STATUS_REPORT.md  DEPLOYMENT_PACKAGE.md  DEPLOYMENT_STATUS_PATH_A.md  DEVELOPMENT_LOG.md  DISTRIBUTION_PROCESS_GUIDE.md  DISTRIBUTION_SCRIPTS_README.md  DISTRIBUTION_TRACKING_TEMPLATE.csv  DOWNLOAD_LINUX_BINARIES.sh  Dockerfile.arm64  Dockerfile.linux  Dockerfile.linux-build  Dockerfile.windows  EXECUTION_COMPLETE_v1.1.0.md  FINAL_GENESIS_v1.1.0.md  GENESIS_BLOCK_FIX_INSTRUCTIONS.md  GENESIS_V1.1.0_FINAL.md  GITHUB_BINARY_RELEASE_STRATEGY.md  INSTRUCTIONS_FOR_LINUX_VM.txt  LAUNCH_DAY_QUICK_REFERENCE.md  LINUX_BINARIES_NEXT_STEPS.md  LINUX_BINARY_DISTRIBUTION_GUIDE.md  LINUX_BUILD_INSTRUCTIONS_v1.1.0.md  LINUX_BUILD_PROGRESS.md  LINUX_BUILD_SUCCESS.md  LINUX_NODE_MIGRATION_GUIDE.md  MANUAL_MIGRATION_PLAN_v1.0_to_v1.1.0.md  (+51 more)
ammocoin-apps-from-ammocoin/: Cargo.toml  Makefile.am  REPOSITORY_ORGANIZATION.md  aclocal.m4  configure~  fix_libtool_build.sh
ammocoin-apps-from-ammocoin/.cargo/: config.offline
ammocoin-apps-from-ammocoin/.tx/: config
ammocoin-apps-from-ammocoin/AMMOcoin-v1.1.0-macOS-ARM64/: README.md  ammocoin-tx
ammocoin-apps-from-ammocoin/contrib/: install_db4.sh  (+2 more)
(+1304 files in other folders)
