[package]
name = "librustzcash"
description = "Rust FFI used by the zcashd binary. Not an official API."
version = "0.2.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
    "Jay Graber <jay@z.cash>",
    "Simon Liu <simon@z.cash>"
]
homepage = "https://github.com/zcash/zcash"
repository = "https://github.com/zcash/zcash"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "rustzcash"
path = "src/rust/src/rustzcash.rs"
crate-type = ["staticlib"]

[dependencies]
bellman = "0.8"
blake2s_simd = "0.5"
ff = "0.8"
libc = "0.2.144"
bls12_381="0.3"
byteorder = "1.4.3"
group = "0.8"
rand_core = "0.5"
jubjub = "0.5"
zcash_primitives = "0.5"
zcash_proofs = "0.5"
zcash_note_encryption = "0.1"

